# django-fitbit-healthkit

./: README.md  functional_tests.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-test-pypi.yml  publish.yml  sample-app-test.yml
django_fitbit_healthkit/: methods.py  models.py  util.py  views.py
django_fitbit_healthkit/migrations/: 0001_initial.py  0002_auto_20210120_1709.py  0003_auto_20210120_1710.py  0004_alter_fitbituser_id.py  0005_fitbituser_last_updated_fitbituser_scopes_and_more.py
django_fitbit_healthkit/templates/fitbit/: success.html
sample/: settings.py  urls.py  views.py
sample/static/sample/: better.css
sample/templates/sample/: index.html  login.html  register.html
templates/sample/: index.html  login.html  register.html
tests/: test.py  test_util.py  test_views.py
